--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg has-megamenu">
           <button class="custom-navbar-toggler" type="button" aria-controls="nav1" aria-expanded="false" aria-label="Toggle navigation" data-target="#nav1">
             <svg class="icon">
-              <use xlink:href="/bootstrap-italia/dist/svg/sprite.svg#it-burger"></use>
+              <use xlink:href="/assets/svg/sprite.svg#it-burger"></use>
             </svg>
           </button>
           <div class="navbar-collapsable" id="nav1" style="display: none;">
@@ -17,14 +17,14 @@
             <div class="menu-wrapper">
               <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="/index.html"><span>Home</span></a></li>
-                <li class="nav-item"><a class="nav-link disabled"><span>link 2 disabled</span></a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/calendario"><span>Calendario</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><span>link 4</span></a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/classifica"><span>Classifica SEM</span></a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/tappe"><span>Tappe SEM</span></a></li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
                     <span>Dropdown item</span>
                     <svg class="icon icon-xs">
-                      <use xlink:href="/bootstrap-italia/dist/svg/sprite.svg#it-expand"></use>
+                      <use xlink:href="/assets/svg/sprite.svg#it-expand"></use>
                     </svg>
                   </a>
                   <div class="dropdown-menu">
@@ -46,7 +46,7 @@
                   <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
                     <span>Megamenu Label</span>
                     <svg class="icon icon-xs">
-                      <use xlink:href="/bootstrap-italia/dist/svg/sprite.svg#it-expand"></use>
+                      <use xlink:href="/assets/svg/sprite.svg#it-expand"></use>
                     </svg>
                   </a>
                   <div class="dropdown-menu">
