--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <!--start nav-->
         <nav class="navbar navbar-expand-lg has-megamenu">
           <button class="custom-navbar-toggler" type="button" aria-controls="nav1" aria-expanded="false" aria-label="Toggle navigation" data-target="#nav1">
-            <svg class="icon">
+            <svg class="icon icon-primary border rounded" style="border-color: #06c!important;">
               <use xlink:href="/assets/svg/sprite.svg#it-burger"></use>
             </svg>
           </button>
